--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -30,4 +30,5 @@
     <dimen name="error_robot_height">140dp</dimen>
 
     <dimen name="favorite_button_size">36dp</dimen>
+    <dimen name="genre_filter_backdrop_corner_radius">16dp</dimen>
 </resources>
